kube/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: komlay-gateway
spec:
  selector:
    istio: ingressgateway  # Selects the Istio ingress gateway by default
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"  # Allows any host to access the gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: komlay
spec:
  hosts:
  - "*"  # Defines the virtual hosts
  gateways:
  - komlay-gateway  # Refers to the Gateway that this VirtualService will use
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /doctors
    - uri:
        exact: /p
    - uri:
        exact: /g
    - uri:
        exact: /ping
    route:
    - destination:
        host: booking-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /grandOak/doctors
    route:
    - destination:
        host: grand-oak
        port:
          number: 5000
  - match:
    - uri:
        prefix: /pineValley/doctors
    route:
    - destination:
        host: pine-valley
        port:
          number: 9090
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: client-app
        port:
          number: 3000
